--- a/src/Components/nav/Footer.css
+++ b/src/Components/nav/Footer.css
@@ -1,3 +1,30 @@
 p{
   margin: 0;
 }
+.logos span{
+  font-size: 16px;
+}
+.footer{
+  background-color: ghostwhite;
+}
+.copyright {
+  background: #ededff;
+  padding: 20px;
+}
+.footer ul {
+  list-style: none;
+  padding-left: 10px;
+}
+.col-md-3.footer-menu ul li {
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+}
+.footer-menu i{
+    padding-right: 10px;
+}
+.footer-menu li a {
+  font-size: 18px;
+  color: #000;
+  text-decoration: none;
+}
